codepkg/objects/Docu_Generation_Individual_Child_Config__mdt.object
<CustomObject>
    <description>Hold info of Multiple docs generated through Doc Gen Template</description>
    <fields>
        <fullName>Attachment_for_Primary_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on Check Document will get attach to Primary Record</description>
        <label>Attachment for Primary Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_for_Related_Object1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on Check attachments are render on Related Obj1</description>
        <label>Attachment for Related Object1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_for_Related_Object2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment for Related Object2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_for_Related_Object3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on Check box Attach Doc to Related Object3 through Documents.</description>
        <label>Attachment for Related Object3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Generation_Config__c</fullName>
        <description>An Induvial file to link to Docu Gen Config.</description>
        <label>Document Generation Config</label>
        <referenceTo>Document_Generation_Config__mdt</referenceTo>
        <relationshipLabel>Docu Generation Individual Child Configs</relationshipLabel>
        <relationshipName>Docu_Generation_Individual_Child_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Obligating</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>De Obligation</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Request</fullName>
                </value>
                <value>
                    <fullName>Supplement</fullName>
                </value>
                <value>
                    <fullName>miscellaneous</fullName>
                    <label>Miscellaneous</label>
                </value>
                <value>
                    <fullName>Notification</fullName>
                    <default>true</default>
                    <label>Notification</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_File_Name__c</fullName>
        <description>The Name to display on Document.</description>
        <label>Document Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_File_Name__c</fullName>
        <description>Holds Template Doc Name</description>
        <label>Original File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Docu Generation Individual Child Config</label>
    <pluralLabel>Docu Generation Individual Child Configs</pluralLabel>
</CustomObject>